mdapioutput/objects/Case.object
<CustomObject>
    <fields>
        <fullName>AssignedDealership_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dealership</label>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseGlobalExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Case Global External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DealerCaseStatus__c</fullName>
        <label>Dealer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent To Dealer</fullName>
                </value>
                <value>
                    <fullName>Error During Sync</fullName>
                </value>
                <value>
                    <fullName>Received From Dealer</fullName>
                </value>
                <value>
                    <fullName>Internal Source</fullName>
                    <default>true</default>
                    <label>Internal Source</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationResponse__c</fullName>
        <label>Integration Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleOwnershipGlobalExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Vehicle Ownership Global External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleOwnership_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Ownership</label>
        <referenceTo>VehicleOwnership__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <businessProcesses>
        <fullName>Maintenance</fullName>
        <description>Vehicle Maintenance</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <recordTypes>
        <fullName>Maintenance</fullName>
        <active>true</active>
        <businessProcess>Maintenance</businessProcess>
        <label>Maintenance</label>
    </recordTypes>
</CustomObject>